[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/WakeUpArea.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]

[node name="WakeUpArea" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="wake_up"]
[connection signal="body_exited" from="." to="." method="let_sleep"]
